Added JPA Refs for Folder Structure (#10)
* Added JPA Refs for Folder and Parent as well as their respective lists
* Remove FolderDTO since Lists are now in entity
* Added Schema Annotations